Bug 396750 - Wrong dates for equinoxes and solstices
Summary: Wrong dates for equinoxes and solstices
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kholidays
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 5.47.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-07-22 11:38 UTC by Karl Ove Hufthammer
Modified: 2018-08-27 18:42 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.50
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Karl Ove Hufthammer 2018-07-22 11:38:57 UTC
*All* the dates for the four equinoxes and solstices shown in the date calendar widget for 2018 are wrong. They are set to the 22nd of March, June, September and December. According to Wikipedia (https://en.wikipedia.org/wiki/Equinox), they should occur at

March Equinox: 20th March
June Solstice: 21th June
September Equinox: 23th September
December Solstice: 21th December

Note that this is for the UTC time zone and for the year 2018. The exact dates for the equinoxes/solstices may differ between time zones and years.
Comment 1 Allen Winter 2018-08-26 13:52:33 UTC
oh geez...
I just assumed astroseasons was fully operational.  I started writing it so many years ago.  I didn't even look at the code.  I never finished it.

I suppose we need to revert f30afcb74a815e5d554f61555f2dd6f1f67445b7
and maybe others
Comment 2 Daniel Vrátil 2018-08-27 18:42:50 UTC
Git commit 55e1d14fe900a5ac1acd3a76dfa51f8ccfa67b21 by Daniel Vrátil.
Committed on 27/08/2018 at 18:42.
Pushed by dvratil into branch 'master'.

Implement proper equinox and solstice calculation algorithm

Summary:
Use algorithm described in Jean Meeus' Astronomical Algorithms book
to calculate exact date on which a season occurs in given year.
FIXED-IN:5.50

Reviewers: winterz

Reviewed By: winterz

Subscribers: kde-pim

Tags: #kde_pim

Differential Revision: https://phabricator.kde.org/D15092

M  +34   -15   autotests/testseasons.cpp
M  +2    -2    autotests/testseasons.h
M  +112  -18   src/astroseasons.cpp
M  +10   -0    src/astroseasons.h

https://commits.kde.org/kholidays/55e1d14fe900a5ac1acd3a76dfa51f8ccfa67b21