Implement proper equinox and solstice calculation algorithm

Summary:
Use algorithm described in Jean Meeus' Astronomical Algorithms book
to calculate exact date on which a season occurs in given year.

BUG:396750
FIXED-IN:5.50

Reviewers: winterz

Reviewed By: winterz

Subscribers: kde-pim

Tags: #kde_pim

Differential Revision: https://phabricator.kde.org/D15092