autotests/testseasons.h
@@ -28,8 +28,8 @@ class SeasonsTest : public QObject
 {
     Q_OBJECT
 private Q_SLOTS:
-    void test2005();
-    void test2007();
+    void test_data();
+    void test();
 };
 
 #endif
